# robot_torso

./: .gitattributes  .gitignore  README.md
src/ets_vii/launch/: effort_controllers.launch  effort_controllers_wgg.launch
src/ets_vii/urdf/: ets_vii_gazebo.xacro  ets_vii_gazebo_old.xacro  ets_vii_gazebo_wgg.xacro
src/ets_vii_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ets_vii_moveit/config/: ets_vii.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers_.yaml  simple_moveit_controllers.yaml
src/ets_vii_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  (+8 more)
src/pid_autotuning/: CMakeLists.txt  package.xml
src/simple_trajectory/: CMakeLists.txt  package.xml
src/talos_control/: CMakeLists.txt  controller_plugins.xml  package.xml
src/talos_control/config/: aruco_cartesian_controller.yaml  aruco_trajectory_cartesian_controller.yaml  cartesian_controller_basic.yaml  cartesian_controller_torso_efforts.yaml  gazebo_cartesian_controller.yaml  head.yaml  test_controller.yaml  test_state.yaml  torso_effort_controller.yaml
src/talos_control/config/rviz/: aruco_rviz.rviz
src/talos_control/include/talos_control/: aruco_cartesian_controller.h  aruco_cartesian_controller.hpp  aruco_trajectory_cartesian_controller.h  aruco_trajectory_cartesian_controller.hpp  cartesian_controller_basic.h  cartesian_controller_basic.hpp  cartesian_controller_gazebo_ref.h  cartesian_controller_gazebo_ref.hpp  cartesian_controller_torso_efforts.h  cartesian_controller_torso_efforts.hpp  prueba_jacobiana.h  torso_effort_controller.h  torso_effort_controller.hpp
src/talos_control/launch/: aruco_cartesian_controller.launch  aruco_trajectory_cartesian_controller.launch  cartesian_controller_basic.launch  cartesian_controller_torso_efforts.launch  gazebo_cartesian_controller.launch  grippers_controllers.launch  head_controller.launch  torso_effort_controller.launch
src/talos_control/msg/: plot_jnt.msg  plot_msg.msg  target_frame.msg
src/talos_control/src/: cartesian_controller.cpp  gripper_service.cpp  hand_service.cpp  look_to_aruco.cpp  matrix_transf.cpp  pinocchio_jacobiana.cc  talos_arms_down.urdf  talos_arms_up.urdf  talos_no_hands.urdf  trajectories.cpp
src/talos_control/srv/: hand_operations.srv
src/talos_gazebo/: package.xml
talos_description/: CMakeLists.txt  package.xml
talos_description/config/: default_configuration_talos.yaml  orbit_parameters.yaml  pids_gripper.yaml
talos_description/gazebo/: gazebo_empty.xacro
talos_description/urdf/: materials.xacro  model.urdf  talos.urdf.xacro  talos.urdf.xacro_  talos.xacro
talos_gazebo/: CMakeLists.txt
talos_gazebo/launch/: talos_iss.launch  talos_only.launch  talos_rviz.launch
talos_gazebo/worlds/: empty.world  iss.world
(+37 files in other folders)
